--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -13,16 +13,32 @@
 
   <body>
     <%- include('partials/_header') %>
-    <div class="card text-center">
+    <div class="card">
       <div class="card-header"></div>
-      <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">
+      <div class="card-header bg-white">
+        <h5 class="card-title text-center">TinyURL for: <%= longURL %></h5>
+        <p class="card-text text-center">
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
       </div>
-      <div class="card-footer text-muted"></div>
+      <div class="card-header bg-light">
+        <h3 class="text-center">Edit</h3>
+        <form class="form-inline justify-content-center" action="/urls/<%= id %>" method="POST">
+          <div class="form-group mb-2">
+            <label for="longURL">Enter a new URL:</label>
+            <input
+              class="form-control"
+              type="text"
+              name="longURL"
+              placeholder="http://"
+              style="width: 300px; margin: 1em"
+            />
+            <button type="submit" class="btn btn-primary">Update</button>
+          </div>
+        </form>
+      </div>
     </div>
+    <div class="card-footer text-muted bg-white"></div>
     <!-- Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
