--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,11 +12,21 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+      <form class="form-inline" action="/login" method="POST">
+        <input
+          class="form-control"
+          type="text"
+          name="username"
+          placeholder="Username"
+          style="width: 250px; margin: 0.5em"
+        />
+        <button type="submit" class="btn btn-outline-dark">Login</button>
+      </form>
     </div>
   </nav>
 </header>
