--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,15 +1,8 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
@@ -19,23 +12,19 @@
       </div>
       <% if (!username) { %>
         <form class="form-inline" action="/login" method="POST">
-          <input
-            class="form-control"
-            type="text"
-            name="username"
-            placeholder="Username"
-            style="width: 250px; margin: 0.5em"
-          />
+          <input class="form-control" type="text" name="username" placeholder="Username"
+            style="width: 250px; margin: 0.5em" />
           <button type="submit" class="btn btn-outline-dark">Login</button>
         </form>
         <% } else { %>
-        <form class="form-inline" action="/logout" method="POST">
-          <div class="form-inline align-content-center">
-            <h6 class="m-auto pr-3" style="color: white">Logged in as: <%= username %></h6>
-            <button type="submit" class="btn btn-outline-dark">Logout</button>
-          </div>
-        </form>
-        <% } %>
+          <form class="form-inline" action="/logout" method="POST">
+            <div class="form-inline align-content-center">
+              <h6 class="m-auto pr-3" style="color: white">Logged in as: <%= username %>
+              </h6>
+              <button type="submit" class="btn btn-outline-dark">Logout</button>
+            </div>
+          </form>
+          <% } %>
     </div>
   </nav>
 </header>
