--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,8 +15,8 @@
 <body style="height:100vh;">
   <div class="container h-100" style="width: 500px;">
     <div class="row h-100 justify-content-center align-items-center">
-      <form class="col-12" method="POST" action="/register">
-        <h1 class="pb-4">Register an Account</h1>
+      <form class="col-12" method="POST" action="/login">
+        <h1 class="pb-4">Login to your Account</h1>
         <div class="form-group">
           <label for="">Email</label>
           <input type="email" class="form-control" name="email" placeholder="Enter email">
@@ -25,7 +25,7 @@
           <label for="">Password</label>
           <input type="password" class="form-control" name="password" placeholder="Enter Password">
         </div>
-        <button type="submit" class="btn btn-primary">Register</button>
+        <button type="submit" class="btn btn-primary">Login</button>
       </form>
     </div>
   </div>
