--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -11,24 +11,25 @@
 
   <title>New URL - TinyApp Example</title>
 </head>
+<%- include('partials/_header') %>
 
-<body style="height:100vh;">
-  <div class="container h-100" style="width: 500px;">
-    <div class="row h-100 justify-content-center align-items-center">
-      <form class="col-12" method="POST" action="/register">
-        <h1 class="pb-4">Register an Account</h1>
-        <div class="form-group">
-          <label for="">Email</label>
-          <input type="email" class="form-control" name="email" placeholder="Enter email">
-        </div>
-        <div class="form-group">
-          <label for="">Password</label>
-          <input type="password" class="form-control" name="password" placeholder="Enter Password">
-        </div>
-        <button type="submit" class="btn btn-primary">Register</button>
-      </form>
+  <body style="height:100vh;">
+    <div class="container h-100" style="width: 500px;">
+      <div class="row h-100 justify-content-center align-items-center">
+        <form class="col-12" method="POST" action="/register">
+          <h1 class="pb-4">Register an Account</h1>
+          <div class="form-group">
+            <label for="">Email</label>
+            <input type="email" class="form-control" name="email" placeholder="Enter email">
+          </div>
+          <div class="form-group">
+            <label for="">Password</label>
+            <input type="password" class="form-control" name="password" placeholder="Enter Password">
+          </div>
+          <button type="submit" class="btn btn-primary">Register</button>
+        </form>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
 
 </html>
